--- a/style.css
+++ b/style.css
@@ -6,3 +6,16 @@ body {
     font-family: 'Rubik', sans-serif;
     background-color: #FFFFFF;
 }
+
+main {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
