--- a/style.css
+++ b/style.css
@@ -19,3 +19,35 @@ main {
     flex-direction: column;
     align-items: center;
 }
+
+button {
+    background-color: rgb(50, 50, 50);
+    color: white;
+    border: 3px solid rgb(50, 50, 50);
+    border-radius: 8px;
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: bold;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+#resetButton:hover {
+    background-color: white;
+    color: rgb(50, 50, 50);
+}
+
+#increaseButton:hover {
+    background-color: green;
+    color: white;
+}
+
+#decreaseButton:hover {
+    background-color: red;
+    color: white;
+}
+
+#numberDisplay {
+    font-size: 100px;
+}
